// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map Renders \`map\` with default props 1`] = `
<div
  class="pa-2"
>
  <div
    class="layout mx-1 wrap"
  >
    <!---->
    <!---->
  </div>
  <!---->
  <!---->
  <geomap-preview-stub
    map="[object Object]"
    popup-actions=""
  />
</div>
`;

exports[`map Renders flowchart \`map\` with state 1`] = `
<div
  class="pa-2"
>
  <div
    class="layout mx-1 wrap"
  >
    <div
      class="flex xs3"
    >
      <c-entity-category-field-stub
        class="mr-3"
      />
    </div>
    <div
      class="flex xs4"
    >
      <div
        class="layout align-center"
      >
        <filter-selector-stub
          clearable="true"
          filters=""
          itemtext="title"
          itemvalue="_id"
          label="Select a filter"
          lockedfilters=""
        />
        <filters-list-btn-stub
          addable="true"
          editable="true"
          private="true"
          widgetid="map-widget-id"
          withentity="true"
          withserviceweather="true"
        />
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <flowchart-preview-stub
    color-indicator="color_indicator"
    map="[object Object]"
    pbehavior-enabled="true"
    popup-actions=""
    popup-template="entity_info_template"
  />
</div>
`;

exports[`map Renders geo \`map\` with state 1`] = `
<div
  class="pa-2"
>
  <div
    class="layout mx-1 wrap"
  >
    <div
      class="flex xs3"
    >
      <c-entity-category-field-stub
        class="mr-3"
      />
    </div>
    <div
      class="flex xs4"
    >
      <div
        class="layout align-center"
      >
        <filter-selector-stub
          clearable="true"
          filters=""
          itemtext="title"
          itemvalue="_id"
          label="Select a filter"
          lockedfilters=""
        />
        <filters-list-btn-stub
          addable="true"
          editable="true"
          private="true"
          widgetid="map-widget-id"
          withentity="true"
          withserviceweather="true"
        />
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <geomap-preview-stub
    color-indicator="color_indicator"
    map="[object Object]"
    pbehavior-enabled="true"
    popup-actions=""
    popup-template="entity_info_template"
  />
</div>
`;

exports[`map Renders mermaid \`map\` with state 1`] = `
<div
  class="pa-2"
>
  <div
    class="layout mx-1 wrap"
  >
    <div
      class="flex xs3"
    >
      <c-entity-category-field-stub
        class="mr-3"
      />
    </div>
    <div
      class="flex xs4"
    >
      <div
        class="layout align-center"
      >
        <filter-selector-stub
          clearable="true"
          filters=""
          itemtext="title"
          itemvalue="_id"
          label="Select a filter"
          lockedfilters=""
        />
        <filters-list-btn-stub
          addable="true"
          editable="true"
          private="true"
          widgetid="map-widget-id"
          withentity="true"
          withserviceweather="true"
        />
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <mermaid-preview-stub
    color-indicator="color_indicator"
    map="[object Object]"
    pbehavior-enabled="true"
    popup-actions=""
    popup-template="entity_info_template"
  />
</div>
`;

exports[`map Renders treeofdeps \`map\` with state 1`] = `
<div
  class="pa-2"
>
  <div
    class="layout mx-1 wrap"
  >
    <div
      class="flex xs3"
    >
      <c-entity-category-field-stub
        class="mr-3"
      />
    </div>
    <div
      class="flex xs4"
    >
      <div
        class="layout align-center"
      >
        <filter-selector-stub
          clearable="true"
          filters=""
          itemtext="title"
          itemvalue="_id"
          label="Select a filter"
          lockedfilters=""
        />
        <filters-list-btn-stub
          addable="true"
          editable="true"
          private="true"
          widgetid="map-widget-id"
          withentity="true"
          withserviceweather="true"
        />
      </div>
    </div>
  </div>
  <!---->
  <!---->
  <tree-of-dependencies-preview-stub
    color-indicator="color_indicator"
    map="[object Object]"
    pbehavior-enabled="true"
    popup-actions=""
    popup-template="entity_info_template"
  />
</div>
`;
